[gd_scene load_steps=15 format=3 uid="uid://c16vjcyoyblch"]

[ext_resource type="Script" path="res://Game/game.gd" id="1_fjd3p"]
[ext_resource type="PackedScene" uid="uid://ybi47fnar2uu" path="res://Game/E/trackE.tscn" id="1_giq4w"]
[ext_resource type="AudioStream" uid="uid://bfh7ecbgy3enb" path="res://Music/Sound/E.mp3" id="2_a6ysf"]
[ext_resource type="PackedScene" uid="uid://bo4yudwfcbv8k" path="res://Game/Attack/attack_q.tscn" id="2_wyowc"]
[ext_resource type="Script" path="res://Game/E/Te Xiao.gd" id="4_ksw25"]
[ext_resource type="PackedScene" uid="uid://csex7b4qn7g2m" path="res://UI/CombolShow/combol_times.tscn" id="4_vksyw"]
[ext_resource type="Texture2D" uid="uid://curgvbm3vbsll" path="res://Game/Mahjong/Card/牌A.png" id="5_hfsit"]
[ext_resource type="PackedScene" uid="uid://wqw7mtmsyrp5" path="res://UI/ScoreShow/score.tscn" id="5_p5nog"]
[ext_resource type="PackedScene" uid="uid://gqy1hn5dc8ra" path="res://Game/Mahjong/mahjong.tscn" id="7_61ram"]
[ext_resource type="PackedScene" uid="uid://cv53akp51mxvw" path="res://Game/Flying Card/flying_card.tscn" id="11_i84h4"]
[ext_resource type="Environment" uid="uid://b5lbfq05dha73" path="res://Set/xn_environment.tres" id="12_utj36"]
[ext_resource type="AudioStream" uid="uid://d122xn72aqiua" path="res://art/test016.wav" id="13_aydtn"]
[ext_resource type="PackedScene" uid="uid://daw3b5dasvsgr" path="res://Game/FinalScore/final_score.tscn" id="14_ybj7k"]
[ext_resource type="AudioStream" uid="uid://c0kl15p1kos6t" path="res://art/test010-C-down.wav" id="15_tova0"]

[node name="Game" type="Node2D"]
script = ExtResource("1_fjd3p")
metadata/_edit_horizontal_guides_ = []

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("12_utj36")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Hited" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_a6ysf")
volume_db = -5.0

[node name="BGM" type="AudioStreamPlayer" parent="."]
volume_db = -10.0

[node name="TextEdit" type="TextEdit" parent="."]
visible = false
offset_left = 706.0
offset_right = 1151.0
offset_bottom = 338.0

[node name="ShowHere" type="Node2D" parent="."]
modulate = Color(1, 1, 1, 0.666667)

[node name="Te Xiao" type="Node2D" parent="."]
position = Vector2(955, 417)
script = ExtResource("4_ksw25")

[node name="Sprite2D" type="Sprite2D" parent="Te Xiao"]
self_modulate = Color(1, 1, 1, 0)
scale = Vector2(0.153682, 0.153682)
texture = ExtResource("5_hfsit")

[node name="Te Xiao2" type="Node2D" parent="."]
position = Vector2(955, 503)
script = ExtResource("4_ksw25")

[node name="Sprite2D" type="Sprite2D" parent="Te Xiao2"]
self_modulate = Color(1, 1, 1, 0)
scale = Vector2(0.153682, 0.153682)
texture = ExtResource("5_hfsit")

[node name="Combol Times" parent="." instance=ExtResource("4_vksyw")]
offset_left = 851.0
offset_top = 260.0
offset_right = 1148.0
offset_bottom = 342.0

[node name="Score" parent="." instance=ExtResource("5_p5nog")]
offset_left = 12.0
offset_top = 139.0
offset_right = 309.0
offset_bottom = 221.0

[node name="ScoreTarget" type="Node2D" parent="Score"]
position = Vector2(116, 62)

[node name="trackE" parent="." instance=ExtResource("1_giq4w")]
position = Vector2(573, 324)
outside_speed = 50.0
inside_speed = 250.0
ioside_radius = 250.0
start_check = -0.28
start_ok = -0.14
start_prefect = -0.035
end_prefect = 0.035
end_ok = 0.14
end_check = 0.21
metadata/_edit_horizontal_guides_ = [-40.0]
metadata/_edit_vertical_guides_ = [-40.0]

[node name="Q" parent="." instance=ExtResource("2_wyowc")]
position = Vector2(164, 506)

[node name="Mahjong" parent="." instance=ExtResource("7_61ram")]
position = Vector2(30, 567)

[node name="Flying Card" parent="." instance=ExtResource("11_i84h4")]

[node name="FinishEffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_aydtn")

[node name="FinalScore" parent="." instance=ExtResource("14_ybj7k")]
visible = false
offset = Vector2(300, 250)
transform = Transform2D(1, 0, 0, 1, 300, 250)

[node name="ButtonQuit" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0
text = "退出"

[node name="AudioCDown" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_tova0")

[connection signal="finished" from="BGM" to="." method="_on_bgm_finished"]
[connection signal="pressed" from="ButtonQuit" to="." method="_on_button_quit_pressed"]
